# DeathStarBench

socialNetwork/: docker-compose.yml
socialNetwork/scripts/init_social_graph_rs/: Cargo.toml  readme.md
socialNetwork/scripts/init_social_graph_rs/src/: main.rs
