[package]
name = "init_social_graph_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5", features = ["json"] }
log = "0.4"
env_logger = "0.11"